--- a/index.html
+++ b/index.html
@@ -78,7 +78,16 @@
             <div class="carousel-item active">
                <img class="first-slide" src="images/Coleira-Smart.jpg" alt="First slide">
             </div>
+            <div class="carousel-item">
+               <img class="second-slide" src="images/Tigela-Smart.jpg" alt="Second slide">
+            </div>
          </div>
+         <a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev">
+            <i class='fa fa-angle-left'></i>
+         </a>
+         <a class="carousel-control-next" href="#myCarousel" role="button" data-slide="next">
+            <i class='fa fa-angle-right'></i>
+         </a>
       </div>
    </section>
    <!-- about  -->
@@ -142,7 +151,10 @@
             <div class="col-md-12">
                <div class="titlepage">
                   <h2>Alimentação</h2>
-                  <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque rutrum neque congue massa sodales, a imperdiet libero auctor. Sed consectetur lacus et dui lacinia consectetur. Praesent tempus mollis est at imperdiet. Praesent in mauris ex. Vivamus nulla velit, gravida in semper.</span>
+                  <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque rutrum neque congue massa
+                     sodales, a imperdiet libero auctor. Sed consectetur lacus et dui lacinia consectetur. Praesent
+                     tempus mollis est at imperdiet. Praesent in mauris ex. Vivamus nulla velit, gravida in
+                     semper.</span>
                </div>
             </div>
          </div>
@@ -252,7 +264,7 @@
    </div>
    <!-- end Testimonial -->
    <!--  footer -->
-   
+
    <!-- end footer -->
    <!-- Javascript files-->
    <script src="js/jquery.min.js"></script>
