Adição do campo de localização

--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
                      <div class="limit-box">
                         <nav class="main-menu">
                            <ul class="menu-area-main">
-                              <li> <a href="#about">Proprietário</a> </li>
-                              <li> <a href="#service">Pet</a> </li>
-                              <li> <a href="#download">Alimentação</a> </li>
-                              <li> <a href="#testimonial">Localização</a> </li>
-                              <li> <a href="#testimonial">Fale Conosco</a> </li>
+                              <li> <a href="#proprietario">Proprietário</a> </li>
+                              <li> <a href="#pet">Pet</a> </li>
+                              <li> <a href="#alimentacao">Alimentação</a> </li>
+                              <li> <a href="#localizacao">Localização</a> </li>
+                              <li> <a href="#depoimentos">Fale Conosco</a> </li>
                            </ul>
                         </nav>
                      </div>
@@ -91,26 +91,19 @@
       </div>
    </section>
    <!-- about  -->
-   <div id="about" class="about top_layer">
+   <div id="proprietario" class="about top_layer">
       <div class="container">
          <div class="row">
             <div class="col-md-12">
                <div class="titlepage">
                   <h2>Proprietário</h2>
-                  <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum congue pulvinar bibendum.
-                     Mauris vitae sem facilisis, scelerisque velit quis, mollis ligula. Mauris ultricies semper elit et
-                     elementum. Nam molestie euismod mollis. Fusce varius lorem vel massa blandit, eget mattis lectus
-                     egestas. Vestibulum cursus tristique metus, et imperdiet magna malesuada eget. Nullam tristique
-                     lacus euismod ipsum euismod volutpat. Etiam et libero viverra, rhoncus ipsum ac, suscipit dolor.
-                     Nunc aliquam elementum diam, eget congue eros maximus in. Cras sagittis, nulla vitae auctor
-                     blandit, eros ligula congue massa, id varius orci lacus in dui. </span>
-               </div>
-            </div>
-         </div>
-         <div class="row">
-            <div class="col-md-12">
-               <div class="img-box">
-                  <figure><img src="images/about.png" alt="img" /></figure>
+                  <span>Se você ama seu Pet e se preocupa com o seu bem estar esse produto foi feito para você!
+                     Com a coleira inteligente você terá total acesso a localização do seu Pet em Real Time, com isso
+                     você evitará dores de cabeças com relação a fugas do animal além de ter controle da distância
+                     percorrida que seu Pet caminhou durante o dia.
+                     Isso tras o conforto de controlar não somente a localização,mas também se seu animal precisa ou não
+                     fazer aquela corridinha no parque no final do dia.
+                  </span>
                </div>
             </div>
          </div>
@@ -118,26 +111,17 @@
    </div>
    <!-- end abouts -->
    <!-- service -->
-   <div id="about" class="service">
+   <div id="pet" class="service">
       <div class="container">
          <div class="row">
             <div class="col-md-12">
                <div class="titlepage">
                   <h2>Pet</h2>
-                  <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum congue pulvinar bibendum.
-                     Mauris vitae sem facilisis, scelerisque velit quis, mollis ligula. Mauris ultricies semper elit et
-                     elementum. Nam molestie euismod mollis. Fusce varius lorem vel massa blandit, eget mattis lectus
-                     egestas. Vestibulum cursus tristique metus, et imperdiet magna malesuada eget. Nullam tristique
-                     lacus euismod ipsum euismod volutpat. Etiam et libero viverra, rhoncus ipsum ac, suscipit dolor.
-                     Nunc aliquam elementum diam, eget congue eros maximus in. Cras sagittis, nulla vitae auctor
-                     blandit, eros ligula congue massa, id varius orci lacus in dui. </span>
-               </div>
-            </div>
-         </div>
-         <div class="row">
-            <div class="col-md-12">
-               <div class="img-box">
-                  <figure><img src="images/about.png" alt="img" /></figure>
+                  <span>O APP tras várias informações sobre seu melhor amigo, dentre eles podemos citar o relatório de
+                     geolocalização e também o relatório referente a dieta que seu Pet está fazendo.
+                     É possivel analisar através dos relatórios se seu Pet deve receber mais ou menos ração durante o
+                     dia, além de controlar os horários de ração.
+                  </span>
                </div>
             </div>
          </div>
@@ -145,20 +129,23 @@
    </div>
    <!-- end service -->
    <!-- Download -->
-   <div id="download" class="download">
+   <div id="alimentacao" class="download">
       <div class="container">
          <div class="row">
             <div class="col-md-12">
                <div class="titlepage">
                   <h2>Alimentação</h2>
-                  <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque rutrum neque congue massa
-                     sodales, a imperdiet libero auctor. Sed consectetur lacus et dui lacinia consectetur. Praesent
-                     tempus mollis est at imperdiet. Praesent in mauris ex. Vivamus nulla velit, gravida in
-                     semper.</span>
+                  <span>A alimentação do seu Pet é crucial para uma boa saúde, por essa razão a Tigela inteligente
+                     proporciona a dosagem certa liberada no horário estipulado pelo dono.
+                     Somente com a aproximação da coleira, a tigela libera o alimento na dosagem correta.
+                     Assim seu Pet não correrá riscos de obesidade ou até mesmo de ficar com comer por não ter mais
+                     ração na tigela.
+
+                  </span>
                </div>
             </div>
          </div>
-         <div class="row">
+         <div class="row" style="margin-bottom: 3em;">
             <div class="col-md-12">
                <div id="main_slider" class="carousel slide banner-main" data-ride="carousel">
                   <div class="carousel-inner">
@@ -175,11 +162,35 @@
                </div>
             </div>
          </div>
+         <div id="localizacao" class="container">
+            <div class="row">
+               <div class="col-md-12">
+                  <div class="titlepage">
+                     <h2>Localização</h2>
+                     <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum congue pulvinar bibendum.
+                        Mauris vitae sem facilisis, scelerisque velit quis, mollis ligula. Mauris ultricies semper elit
+                        et
+                        elementum. Nam molestie euismod mollis. Fusce varius lorem vel massa blandit, eget mattis lectus
+                        egestas. Vestibulum cursus tristique metus, et imperdiet magna malesuada eget. Nullam tristique
+                        lacus euismod ipsum euismod volutpat. Etiam et libero viverra, rhoncus ipsum ac, suscipit dolor.
+                        Nunc aliquam elementum diam, eget congue eros maximus in. Cras sagittis, nulla vitae auctor
+                        blandit, eros ligula congue massa, id varius orci lacus in dui. </span>
+                  </div>
+               </div>
+            </div>
+            <div class="row">
+               <div class="col-md-12">
+                  <div class="img-box">
+                     <figure style="text-align: center;"><img src="images/map.png" alt="img" /></figure>
+                  </div>
+               </div>
+            </div>
+         </div>
       </div>
    </div>
    <!-- end Download -->
    <!-- Testimonial -->
-   <div id="testimonial" class="testimonial">
+   <div id="depoimentos" class="testimonial">
       <div class="container">
          <div class="row">
             <div class="col-md-12">
@@ -196,11 +207,12 @@
                         <img class="first-slide" src="images/testimonial-img.png">
                         <div class="container">
                            <div class="carousel-caption relat">
-                              <h3>Luka due</h3>
-                              <span><i class="fa fa-quote-left"></i> ( foundery )<i
+                              <h3>Fábio Dantas</h3>
+                              <span><i class="fa fa-quote-left"></i> ( Fundador )<i
                                     class="fa fa-quote-right"></i></span>
-                              <p>It is a long established fact that a reader will be distracted by the readable content
-                                 of a page when looking at its layout. The point of using Lorem </p>
+                              <p>Comprei a coleira e a tigela My Cute Pet e estou maravilhada!
+                                 Descobri porque meu cachorro sempre fugia de casa, através do GPS rastreie e descobri
+                                 onde ele costumava ir! Ele tinha uma 'namorada' à duas quadras da minha casa!</p>
                            </div>
                         </div>
                      </div>
@@ -211,8 +223,9 @@
                               <h3>Luka due</h3>
                               <span><i class="fa fa-quote-left"></i> ( foundery )<i
                                     class="fa fa-quote-right"></i></span>
-                              <p>It is a long established fact that a reader will be distracted by the readable content
-                                 of a page when looking at its layout. The point of using Lorem </p>
+                              <p>Comprei a coleira e a tigela My Cute e só tenho elogios!
+                                 Consigo manter meu Pet alimentado, sempre na hora certa. Ele nunca mais ficou doente!
+                              </p>
                            </div>
                         </div>
                      </div>
