--- a/index.html
+++ b/index.html
@@ -149,11 +149,10 @@
             <div class="col-md-12">
                <div id="main_slider" class="carousel slide banner-main" data-ride="carousel">
                   <div class="carousel-inner">
-                     <div class="carousel-item active"> <img class="first-slide" src="images/banner.png"
-                           alt="First slide"> </div>
-                     <div class="carousel-item"> <img class="second-slide" src="images/banner.png" alt="Second slide">
-                     </div>
-                     <div class="carousel-item"> <img class="third-slide" src="images/banner.png" alt="Third slide">
+                     <div class="carousel-item active"> <img class="first-slide" src="images/tigela.jpg"
+                           style="max-width: 30% !important;" alt="First slide"> </div>
+                     <div class="carousel-item"> <img class="second-slide" src="images/coleira.jpeg"
+                           style="max-width: 30% !important;" alt="Second slide">
                      </div>
                   </div>
                   <a class="carousel-control-prev" href="#main_slider" role="button" data-slide="prev"> <i
@@ -167,14 +166,12 @@
                <div class="col-md-12">
                   <div class="titlepage">
                      <h2>Localização</h2>
-                     <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum congue pulvinar bibendum.
-                        Mauris vitae sem facilisis, scelerisque velit quis, mollis ligula. Mauris ultricies semper elit
-                        et
-                        elementum. Nam molestie euismod mollis. Fusce varius lorem vel massa blandit, eget mattis lectus
-                        egestas. Vestibulum cursus tristique metus, et imperdiet magna malesuada eget. Nullam tristique
-                        lacus euismod ipsum euismod volutpat. Etiam et libero viverra, rhoncus ipsum ac, suscipit dolor.
-                        Nunc aliquam elementum diam, eget congue eros maximus in. Cras sagittis, nulla vitae auctor
-                        blandit, eros ligula congue massa, id varius orci lacus in dui. </span>
+                     <span>Através da localização em tempo real, você pode acompanhar os passos do seu melhor amigo!
+                        Além de obter a distância, você poderá acompanhar por relatórios toda a movimentação do seu
+                        bichinho.
+                        Essa analise auxilia na prevenção de sedentarismo e até mesmo possíveis doenças.
+                        Se você possui chácara ou sítio, poderá manter seu Pet solto sem se preocupar se ele irá se
+                        perder ou não </span>
                   </div>
                </div>
             </div>
@@ -217,27 +214,14 @@
                         </div>
                      </div>
                      <div class="carousel-item">
-                        <img class="second-slide" src="images/testimonial-img.png">
-                        <div class="container">
-                           <div class="carousel-caption relat">
-                              <h3>Luka due</h3>
-                              <span><i class="fa fa-quote-left"></i> ( foundery )<i
-                                    class="fa fa-quote-right"></i></span>
-                              <p>Comprei a coleira e a tigela My Cute e só tenho elogios!
-                                 Consigo manter meu Pet alimentado, sempre na hora certa. Ele nunca mais ficou doente!
-                              </p>
-                           </div>
-                        </div>
-                     </div>
-                     <div class="carousel-item">
                         <img class="third-slide" src="images/testimonial-img.png">
                         <div class="container">
                            <div class="carousel-caption relat">
-                              <h3>Luka due</h3>
-                              <span><i class="fa fa-quote-left"></i> ( foundery )<i
-                                    class="fa fa-quote-right"></i></span>
-                              <p>It is a long established fact that a reader will be distracted by the readable content
-                                 of a page when looking at its layout. The point of using Lorem </p>
+                              <h3>Fabiana Duarte</h3>
+                              <span><i class="fa fa-quote-left"></i> ( Cliente )<i class="fa fa-quote-right"></i></span>
+                              <p>Comprei a coleira e a tigela My Cute e só tenho elogios!
+                                 Consigo manter meu Pet alimentado, sempre na hora certa. Ele nunca mais ficou doente!
+                              </p>
                            </div>
                         </div>
                      </div>
