--- a/index.html
+++ b/index.html
@@ -205,30 +205,15 @@
                         <div class="container">
                            <div class="carousel-caption relat">
                               <h3>Fábio Dantas</h3>
-                              <span><i class="fa fa-quote-left"></i> ( Fundador )<i
+                              <span><i class="fa fa-quote-left"></i> ( Cliente )<i
                                     class="fa fa-quote-right"></i></span>
-                              <p>Comprei a coleira e a tigela My Cute Pet e estou maravilhada!
-                                 Descobri porque meu cachorro sempre fugia de casa, através do GPS rastreie e descobri
+                              <p>Comprei a coleira e a tigela My Cute Pet e estou maravilhado!
+                                 Descobri porque meu cachorro sempre fugia de casa, através do GPS rastreei ele e descobri
                                  onde ele costumava ir! Ele tinha uma 'namorada' à duas quadras da minha casa!</p>
                            </div>
                         </div>
                      </div>
-                     <div class="carousel-item">
-                        <img class="third-slide" src="images/testimonial-img.png">
-                        <div class="container">
-                           <div class="carousel-caption relat">
-                              <h3>Fabiana Duarte</h3>
-                              <span><i class="fa fa-quote-left"></i> ( Cliente )<i class="fa fa-quote-right"></i></span>
-                              <p>Comprei a coleira e a tigela My Cute e só tenho elogios!
-                                 Consigo manter meu Pet alimentado, sempre na hora certa. Ele nunca mais ficou doente!
-                              </p>
-                           </div>
-                        </div>
-                     </div>
                   </div>
-                  <a class="carousel-control-prev" href="#testimonial_slider" role="button" data-slide="prev"> <i
-                        class='fa fa-angle-right'></i></a> <a class="carousel-control-next" href="#testimonial_slider"
-                     role="button" data-slide="next"> <i class='fa fa-angle-left'></i></a>
                </div>
             </div>
             <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
